src/main/log/build_2020-07-11_22-48-55/main/stdout_stderr.log
-- The C compiler identification is AppleClang 11.0.3.11030032
-- The CXX compiler identification is AppleClang 11.0.3.11030032
-- Check for working C compiler: /Library/Developer/CommandLineTools/usr/bin/cc
-- Check for working C compiler: /Library/Developer/CommandLineTools/usr/bin/cc -- works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Detecting C compile features
-- Detecting C compile features - done
-- Check for working CXX compiler: /Library/Developer/CommandLineTools/usr/bin/c++
-- Check for working CXX compiler: /Library/Developer/CommandLineTools/usr/bin/c++ -- works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 0.9.5 (/Users/mukuyo/ros2_ws/ros2-osx/share/ament_cmake/cmake)
-- Found PythonInterp: /usr/local/opt/python@3.8/bin/python3 (found suitable version "3.8.3", minimum required is "3") 
-- Using PYTHON_EXECUTABLE: /usr/local/opt/python@3.8/bin/python3
-- Found rclcpp: 2.0.0 (/Users/mukuyo/ros2_ws/ros2-osx/share/rclcpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_connext_c;rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 1.0.1 (/Users/mukuyo/ros2_ws/ros2-osx/share/rosidl_adapter/cmake)
-- Could not find RTI Connext - skipping rosidl_typesupport_connext_c
-- Could not find RTI Connext - skipping rosidl_typesupport_connext_cpp
-- Found OpenSSL: /usr/local/opt/openssl@1.1/lib/libcrypto.dylib (found version "1.1.1g")  
-- Found FastRTPS: /Users/mukuyo/ros2_ws/ros2-osx/include  
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_connext_cpp;rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 1.0.1 (/Users/mukuyo/ros2_ws/ros2-osx/share/rmw_implementation_cmake/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Found message_info: 0.0.0 (/Users/mukuyo/RI-AI/install/message_info/share/message_info/cmake)
-- Found ament_lint_auto: 0.9.4 (/Users/mukuyo/ros2_ws/ros2-osx/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: 
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /Users/mukuyo/RI-AI/src/main/build/main
Scanning dependencies of target main
[ 50%] Building CXX object CMakeFiles/main.dir/src/main.cpp.o
/Users/mukuyo/RI-AI/src/main/src/main.cpp:16:16: error: no viable overloaded '='
    subscriber = this->create_subscription<message_info::msg::VisionDetections>("vision_detections",10,std::bind(&Main::callback,this,std::placeholders::_1));
    ~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/memory:3839:17: note: candidate function not viable: no known conversion from 'shared_ptr<Subscription<message_info::msg::RobotCommands_<std::__1::allocator<void> >, [...], MessageMemoryStrategy<message_info::msg::RobotCommands_<std::__1::allocator<void> >, [...]>>>' to 'const shared_ptr<Subscription<message_info::msg::VisionDetections_<std::__1::allocator<void> >, [...], MessageMemoryStrategy<message_info::msg::VisionDetections_<std::__1::allocator<void> >, [...]>>>' for 1st argument
    shared_ptr& operator=(const shared_ptr& __r) _NOEXCEPT;
                ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/memory:3850:17: note: candidate function not viable: no known conversion from 'shared_ptr<Subscription<message_info::msg::RobotCommands_<std::__1::allocator<void> >, [...], MessageMemoryStrategy<message_info::msg::RobotCommands_<std::__1::allocator<void> >, [...]>>>' to 'shared_ptr<Subscription<message_info::msg::VisionDetections_<std::__1::allocator<void> >, [...], MessageMemoryStrategy<message_info::msg::VisionDetections_<std::__1::allocator<void> >, [...]>>>' for 1st argument
    shared_ptr& operator=(shared_ptr&& __r) _NOEXCEPT;
                ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/memory:3847:9: note: candidate template ignored: requirement 'is_convertible<rclcpp::Subscription<message_info::msg::RobotCommands_<std::__1::allocator<void> >, std::__1::allocator<void>, rclcpp::message_memory_strategy::MessageMemoryStrategy<message_info::msg::RobotCommands_<std::__1::allocator<void> >, std::__1::allocator<void> > > *, rclcpp::Subscription<message_info::msg::VisionDetections_<std::__1::allocator<void> >, std::__1::allocator<void>, rclcpp::message_memory_strategy::MessageMemoryStrategy<message_info::msg::VisionDetections_<std::__1::allocator<void> >, std::__1::allocator<void> > > *>::value' was not satisfied [with _Yp = rclcpp::Subscription<message_info::msg::RobotCommands_<std::__1::allocator<void> >, std::__1::allocator<void>, rclcpp::message_memory_strategy::MessageMemoryStrategy<message_info::msg::RobotCommands_<std::__1::allocator<void> >, std::__1::allocator<void> > >]
        operator=(const shared_ptr<_Yp>& __r) _NOEXCEPT;
        ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/memory:3858:9: note: candidate template ignored: requirement 'is_convertible<rclcpp::Subscription<message_info::msg::RobotCommands_<std::__1::allocator<void> >, std::__1::allocator<void>, rclcpp::message_memory_strategy::MessageMemoryStrategy<message_info::msg::RobotCommands_<std::__1::allocator<void> >, std::__1::allocator<void> > > *, rclcpp::Subscription<message_info::msg::VisionDetections_<std::__1::allocator<void> >, std::__1::allocator<void>, rclcpp::message_memory_strategy::MessageMemoryStrategy<message_info::msg::VisionDetections_<std::__1::allocator<void> >, std::__1::allocator<void> > > *>::value' was not satisfied [with _Yp = rclcpp::Subscription<message_info::msg::RobotCommands_<std::__1::allocator<void> >, std::__1::allocator<void>, rclcpp::message_memory_strategy::MessageMemoryStrategy<message_info::msg::RobotCommands_<std::__1::allocator<void> >, std::__1::allocator<void> > >]
        operator=(shared_ptr<_Yp>&& __r);
        ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/memory:3868:9: note: candidate template ignored: could not match 'auto_ptr' against 'shared_ptr'
        operator=(auto_ptr<_Yp>&& __r);
        ^
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/memory:3892:9: note: candidate template ignored: could not match 'unique_ptr' against 'shared_ptr'
        operator=(unique_ptr<_Yp, _Dp>&& __r);
        ^
/Users/mukuyo/RI-AI/src/main/src/main.cpp:17:39: error: no matching literal operator for call to 'operator""s' with argument of type 'unsigned long long' or 'const char *', and no matching literal operator template
    timer_ = this->create_wall_timer(1s, std::bind(&Main::timer_callback, this));
                                      ^
/Users/mukuyo/RI-AI/src/main/src/main.cpp:25:57: error: no member named 'frames' in 'message_info::msg::RobotCommands_<std::__1::allocator<void> >'
    RCLCPP_INFO(this->get_logger(),"%f",vision_message->frames[0].balls[0].pose.x);
                                        ~~~~~~~~~~~~~~  ^
/Users/mukuyo/ros2_ws/ros2-osx/include/rclcpp/logging.hpp:545:35: note: expanded from macro 'RCLCPP_INFO'
        RCLCPP_ALL_BUT_FIRST_ARGS(__VA_ARGS__,"")); \
                                  ^~~~~~~~~~~
/Users/mukuyo/ros2_ws/ros2-osx/include/rclcpp/logging.hpp:36:43: note: expanded from macro 'RCLCPP_ALL_BUT_FIRST_ARGS'
#define RCLCPP_ALL_BUT_FIRST_ARGS(N, ...) __VA_ARGS__
                                          ^~~~~~~~~~~
/Users/mukuyo/ros2_ws/ros2-osx/include/rcutils/logging_macros.h:503:5: note: expanded from macro 'RCUTILS_LOG_INFO_NAMED'
    __VA_ARGS__)
    ^~~~~~~~~~~
/Users/mukuyo/ros2_ws/ros2-osx/include/rcutils/logging_macros.h:72:64: note: expanded from macro 'RCUTILS_LOG_COND_NAMED'
      rcutils_log(&__rcutils_logging_location, severity, name, __VA_ARGS__); \
                                                               ^~~~~~~~~~~
3 errors generated.
make[2]: *** [CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
